updating some of the paradigms and fixed some of the failing tests

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,4 +1,4 @@
 <h2 id="title">Welcome to Ember</h2>
-{{route-announcer class="spec-announcer"}}
-{{#link-to 'index'}}Index{{/link-to}} | {{#link-to 'another'}}Another{{/link-to}}
+<RouteAnnouncer class="spec-announcer" />
+<LinkTo @route='index'>Index</LinkTo> | <LinkTo @route='another'>Another</LinkTo>
 {{outlet}}
