--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,3 +1,3 @@
 <h1>Index Route</h1>
 
-<button {{action 'announceSomething'}} class="spec-announce-btn">Click me!</button>
+<button {{action "announceSomething"}} class="spec-announce-btn">Click me!</button>
